--- a/bb-client/src/index.css
+++ b/bb-client/src/index.css
@@ -4,8 +4,26 @@
 
 /* Light Mode Variables */
 :root {
-  --color-background: #ffffff;
-  --color-text: #212f43;
+  --color-background-100: #000000;
+  --color-background-200: #181e27;
+  --color-background-300: #3e4856;
+  --color-background-400: #6b7280;
+  --color-background-500: #9ca3af;
+  --color-background-600: #d1d5db;
+  --color-background-700: #e5e7eb;
+  --color-background-800: #f3f4f6;
+  --color-background-900: #ffffff;
+
+  --color-text-100: #ffffff;
+  --color-text-200: #f3f4f6;
+  --color-text-300: #e5e7eb;
+  --color-text-400: #d1d5db;
+  --color-text-500: #9ca3af;
+  --color-text-600: #6b7280;
+  --color-text-700: #3e4856;
+  --color-text-800: #232b37;
+  --color-text-900: #000000;
+
   --color-header: #f3f4f6;
   --color-primary: #1e40af;
   --color-accent: #3b82f6;
@@ -13,7 +31,26 @@
 
 /* Dark Mode Variables */
 .dark {
-  --color-background: #1a202c;
+  --color-background-100: #ffffff;
+  --color-background-200: #f3f4f6;
+  --color-background-300: #e5e7eb;
+  --color-background-400: #d1d5db;
+  --color-background-500: #9ca3af;
+  --color-background-600: #6b7280;
+  --color-background-700: #3e4856;
+  --color-background-800: #232b37;
+  --color-background-900: #000000;
+
+  --color-text-100: #000000;
+  --color-text-200: #1b212b;
+  --color-text-300: #4b5563;
+  --color-text-400: #6b7280;
+  --color-text-500: #9ca3af;
+  --color-text-600: #d1d5db;
+  --color-text-700: #e5e7eb;
+  --color-text-800: #f3f4f6;
+  --color-text-900: #ffffff;
+
   --color-text: #e2e8f0;
   --color-header: #2d3748;
   --color-primary: #90cdf4;
@@ -21,7 +58,7 @@
 }
 
 /* Apply Variables to Tailwind Classes */
-.bg-background {
+/* .bg-background {
   background-color: var(--color-background);
 }
 
@@ -43,4 +80,4 @@
 
 .hover\:bg-accent:hover {
   background-color: var(--color-accent);
-}
+} */
