add search field for rpis and their subdomains

--- a/bb-client/src/index.css
+++ b/bb-client/src/index.css
@@ -23,6 +23,8 @@
   --color-text-700: #3e4856;
   --color-text-800: #232b37;
   --color-text-900: #000000;
+  --color-text-light: #e2e8f0;
+  --color-text-dark: #1b212b;
 
   --color-header: #f3f4f6;
   --color-primary: #1e40af;
