--- a/bb-client/src/App.css
+++ b/bb-client/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+/* Style for all scrollbars */
+::-webkit-scrollbar {
+  width: 0.75rem; /* width of the entire scrollbar */
+  height: 0.75rem; /* height of the entire scrollbar */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar-track {
+  background: var(--color-text-700); /* color of the track */
+  border-radius: 0.75rem; /* roundness of the track */
+  display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-text-700); /* color of the scroll thumb */
+  border-radius: 0.75rem; /* roundness of the scroll thumb */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-text-600); /* color of the scroll thumb */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-thumb:active {
+  background-color: var(--color-text-500); /* color of the scroll thumb */
 }
